--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.2",
+    "recharts": "^3.6.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
