--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^0.27.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
