--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^0.27.2",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "formik": "^2.4.9",
     "lodash": "^4.17.21",
     "react": "^19.2.0",
